# context42

./: CHANGELOG.md  README.md  pyproject.toml
src/context42/: __init__.py  __main__.py  cli.py  config.py  indexer.py  search.py  server.py  storage.py
