[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context42-io"
version = "0.2.0"
description = "MCP server for personal coding instructions and documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Context42 Team", email = "team@context42.io" }
]
keywords = ["mcp", "llm", "documentation", "code-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "typer>=0.9.0",
    "fastembed>=0.2.0",
    "lancedb>=0.4.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
c42 = "context42.cli:app"
context42 = "context42.cli:app"

[project.urls]
Homepage = "https://github.com/context42-io/context42"
Repository = "https://github.com/context42-io/context42"

[tool.hatch.build.targets.wheel]
packages = ["src/context42"]
