[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context42-io"
version = "0.4.2"
description = "MCP server for semantic search over personal coding instructions and documentation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "mcp",
    "llm",
    "semantic-search",
    "documentation",
    "code-assistant",
    "claude",
    "vector-search",
    "embeddings"
]
authors = [
    {name = "Daniel Gines", email = "dangines@gmail.com"}
]
maintainers = [
    {name = "Daniel Gines", email = "dangines@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "fastmcp>=0.1.0",
    "typer>=0.9.0",
    "fastembed>=0.2.0",
    "lancedb>=0.4.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
c42 = "context42.cli:app"
context42 = "context42.cli:app"

[project.urls]
Homepage = "https://github.com/context42-io/context42"
Repository = "https://github.com/context42-io/context42"
Changelog = "https://github.com/context42-io/context42/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/context42"]

[tool.hatch.build.targets.sdist]
exclude = [
    "*.md",
    "!README.md",
    "!CHANGELOG.md",
    "!LICENSE",
    ".claude/",
    ".gitignore",
]
